# Progetto

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  progetto.sh  progetto.sh~  spiegazione
include/: cell.h  list.h  mat.h  pgm_file.h  printable_file.h  tools.h
src/: cell.cpp  get_line.cpp  list.cpp  pgm_file.cpp  project_app.cpp  tools.cpp
